# geomapi-alignmenttools

./: README.md  requirements.txt  setup.cfg
alignmenttools/: __init__.py  match.py  params.py  pose2d.py  pose3d.py  utils.py
samples/: Sample.ipynb  alignmenttoolsexample.ipynb
tests/: context.py  test_completiontools.py
