[metadata]
name = geomapi-alignmenttools
version = 0.0.1
author = Jelle Vermandere
author_email = jelle.vermandere@kuleuven.be
description = alignemtn of 2D and 3D data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JelleKUL/geomapi-alignmenttools
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src